--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "firebase": "^9.22.2",
     "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
