--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "swiper": "^9.4.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
