design and deleted header

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_GOOGLEMAP_API=AIzaSyCrmyl_QXkUr8ZGEx9JGAKycu7miwSZfWU
 REACT_APP_WEATHER_API=ee4f6a978d26201d920da414f4ef601f
 REACT_APP_FIREBASE_API=AIzaSyDsFA5Rc1u5gTtmv2ArgVM1a0AMbW1oh3E
 REACT_APP_FIREBASE_APP_ID=1:199140780697:web:2ba1b23acdf3669b3aa608
+REACT_APP_ENCRYPT_KEY=memorachain
