--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "crypto-js": "^4.1.1",
     "firebase": "^9.22.2",
     "html-to-image": "^1.11.11",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.0",
     "react-router-dom": "^6.13.0",
