--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.10.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
     "swiper": "^9.4.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
