--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "firebase": "^9.22.2",
+    "framer-motion": "^10.12.18",
     "html-to-image": "^1.11.11",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
